--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "relationscontractui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "lovelockscontractui",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "^1.0.10",
-    "web3": "^0.20.1"
+    "react-scripts": "1.0.10",
+    "web3": "0.20.1",
+    "lodash": "^4.17.4"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
