--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10",
-    "web3": "0.20.1",
-    "lodash": "^4.17.4"
+    "web3": "0.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
