--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-minimalist-portal": "^2.1.1"
   }
 }
